evidence summary layout looks good

--- a/client/src/app/components/shared/evidence-popover/evidence-popover.component.html
+++ b/client/src/app/components/shared/evidence-popover/evidence-popover.component.html
@@ -58,7 +58,7 @@
 
         <!-- disease -->
         <nz-descriptions-item nzTitle="Disease">
-          {{ evidence.disease ? evidence.disease : 'N/A' }}
+          {{ evidence.disease ? evidence.disease.displayName : 'N/A' }}
         </nz-descriptions-item>
 
         <!-- drugs -->
