created override styles for page-header components

--- a/client/src/app/layout/layout.component.less
+++ b/client/src/app/layout/layout.component.less
@@ -110,5 +110,5 @@ nz-content {
   border-top: 1px solid #3e5166;
   border-left: 1px solid #3e5166;
   padding: 12px;
-  border-top-left-radius: 16px;
+  border-top-left-radius: @border-radius-lg;
 }
