--- a/client/src/themes/default.less
+++ b/client/src/themes/default.less
@@ -45,21 +45,4 @@
 @primary-9: color(~`colorPalette('@{primary-color}', 9) `); // unused
 @primary-10: color(~`colorPalette('@{primary-color}', 10) `); // unused
 
-
-/* STRUCTURAL OVERRIDES
- * Overrides to zorro component's padding, margin, display, font, etc. styles goes here.
- *
- * These will be overriding both zoro default & compact themes, so copy those file's
- * naming, variable, and other conventions before hard-coding structural styles into CIViC components.
- *
- * https://github.com/NG-ZORRO/ng-zorro-antd/blob/master/components/style/themes/[default/compact].less
- * or locally: ~ng-zorro-antd/style/themes/[default/compact].less
- */
-
-// CIViC PageHeader
-// ---
-// @page-header-padding: @default-padding-sm;
-// @page-header-padding-vertical: @default-padding-sm;
-// @page-header-heading-title: 16px;
-// @page-header-heading-sub-title: 12px;
-// @page-header-tabs-tab-font-size: 14px;
+// PUT CUSTOM GLOBALS IN global-variables.less
