--- a/client/src/themes/global-variables.less
+++ b/client/src/themes/global-variables.less
@@ -356,3 +356,8 @@
 // ---
 @image-size-base: 48px;
 @image-font-size-base: 24px;
+
+// Component Border Radius
+// ---
+@border-radius-lg: 16px;
+@border-radius-md: 8px;
