entity page header layout & styles for tabs + actions, contributors looks good

--- a/client/src/app/components/shared/comment-add/comment-add.component.html
+++ b/client/src/app/components/shared/comment-add/comment-add.component.html
@@ -31,4 +31,9 @@
     </nz-form-item>
   </form>
 </nz-card>
-<ngx-json-viewer *ngIf="formModel" [json]="formModel"></ngx-json-viewer>
+<!-- <nz-row>
+     <nz-col>
+     <p>Body: <ngx-json-viewer [json]="formModel.body"></ngx-json-viewer></p>
+     <p>Subject: <ngx-json-viewer [json]="formModel.subject"></ngx-json-viewer></p>
+     </nz-col>
+     </nz-row> -->
