--- a/client/src/themes/global-variables.less
+++ b/client/src/themes/global-variables.less
@@ -15,9 +15,6 @@
 */
 @white: #fff;
 @black: #000;
-@height-base: 32px;
-@height-lg: 40px;
-@height-sm: 24px;
 
 // Layout
 @layout-body-background: #f0f2f5;
@@ -361,3 +358,6 @@
 // ---
 @border-radius-lg: 16px;
 @border-radius-md: 8px;
+
+@btn-height-xs: @height-sm - 2px;
+@btn-font-size-xs: @font-size-sm;
