--- a/client/src/app/components/shared/evidence-browse/evidence-browse.component.html
+++ b/client/src/app/components/shared/evidence-browse/evidence-browse.component.html
@@ -45,40 +45,46 @@
                 </th>
                 <th nzWidth="5%"
                   [nzColumnKey]="sortColumns.Description"
+                  nzAlign="center"
                   [nzSortFn]="true">
                   Description
                 </th>
                 <th nzWidth="5%"
                   [nzColumnKey]="sortColumns.EvidenceLevel"
                   [nzSortFn]="true"
+                  nzAlign="center"
                   nz-tooltip
                   nzTooltipTitle="Evidence Level">
                   EL
                 </th>
-                <th nzWidth="10%"
+                <th nzWidth="5%"
                   [nzColumnKey]="sortColumns.EvidenceType"
                   [nzSortFn]="true"
+                  nzAlign="center"
                   nz-tooltip
                   nzTooltipTitle="Evidence Type">
                   ET
                 </th>
-                <th nzWidth="10%"
+                <th nzWidth="5%"
                   [nzColumnKey]="sortColumns.EvidenceDirection"
                   [nzSortFn]="true"
+                  nzAlign="center"
                   nz-tooltip
                   nzTooltipTitle="Evidence Direction">
                   ED
                 </th>
-                <th nzWidth="10%"
+                <th nzWidth="5%"
                   [nzColumnKey]="sortColumns.ClinicalSignificance"
                   [nzSortFn]="true"
+                  nzAlign="center"
                   nz-tooltip
                   nzTooltipTitle="Clinical Significance">
                   CS
                 </th>
-                <th nzWidth="10%"
+                <th nzWidth="5%"
                   [nzColumnKey]="sortColumns.VariantOrigin"
                   [nzSortFn]="true"
+                  nzAlign="center"
                   nz-tooltip
                   nzTooltipTitle="Variant Origin">
                   VO
@@ -86,6 +92,7 @@
                 <th nzWidth="5%"
                   [nzColumnKey]="sortColumns.EvidenceRating"
                   [nzSortFn]="true"
+                  nzAlign="center"
                   nz-tooltip
                   nzTooltipTitle="Rating">
                   R
@@ -104,11 +111,11 @@
                   <cvc-clearable-text-filter [(inputModel)]="drugNameInput"
                     [onInputChanged]="textInputCallback"></cvc-clearable-text-filter>
                 </th>
-                <th>
+                <th nzAlign="center">
                   <cvc-clearable-text-filter [(inputModel)]="descriptionInput"
                     [onInputChanged]="textInputCallback"></cvc-clearable-text-filter>
                 </th>
-                <th>
+                <th nzAlign="center">
                   <nz-select nzAllowClear
                     nzPlaceHolder="All"
                     [nzDropdownMatchSelectWidth]="false"
@@ -126,7 +133,7 @@
                       nzLabel="E"></nz-option>
                   </nz-select>
                 </th>
-                <th>
+                <th nzAlign="center">
                   <nz-select nzAllowClear
                     nzPlaceHolder="All"
                     [nzDropdownMatchSelectWidth]="false"
@@ -146,7 +153,7 @@
                       nzLabel="Functional"></nz-option>
                   </nz-select>
                 </th>
-                <th>
+                <th nzAlign="center">
                   <nz-select nzAllowClear
                     nzPlaceHolder="All"
                     [nzDropdownMatchSelectWidth]="false"
@@ -161,7 +168,7 @@
                       nzLabel="N/A"></nz-option>
                   </nz-select>
                 </th>
-                <th nzWidth="5%">
+                <th nzWidth="5%" nzAlign="center">
                   <nz-select nzAllowClear
                     nzPlaceHolder="All"
                     [nzDropdownMatchSelectWidth]="false"
@@ -217,7 +224,7 @@
                     </nz-option-group>
                   </nz-select>
                 </th>
-                <th>
+                <th nzWidth="5%" nzAlign="center">
                   <nz-select nzAllowClear
                     nzPlaceHolder="All"
                     [nzDropdownMatchSelectWidth]="false"
@@ -237,7 +244,7 @@
                       nzLabel="Germline or Somatic"></nz-option>
                   </nz-select>
                 </th>
-                <th>
+                <th nzWidth="5%" nzAlign="center">
                   <nz-select nzAllowClear
                     nzPlaceHolder="All"
                     [nzDropdownMatchSelectWidth]="false"
@@ -291,30 +298,46 @@
                     <i>N/A</i>
                   </ng-template>
                 </td>
-                <td>
+                <td nzAlign="center">
                   <i nz-icon
                     nzType="align-left"
                     nz-tooltip
                     nzTooltipPlacement="top"
                     [nzTooltipTitle]="eid.description"></i>
                 </td>
-                <td>
-                  {{ eid.evidenceLevel }}
+                <td nzAlign="center">
+                  {{ eid.evidenceLevel | evidenceEnumDisplay }}
                 </td>
-                <td>
-                  {{ eid.evidenceType }}
+                <td nzAlign="center">
+                  <i nz-icon [nzType]="eid.evidenceType | evidenceEnumDisplay: 'icon-name'"
+                    nz-tooltip
+                    nzTooltipPlacement="top"
+                    [nzTooltipTitle]="eid.evidenceType | evidenceEnumDisplay"></i>
                 </td>
-                <td>
-                  {{ eid.evidenceDirection }}
+                <td nzAlign="center">
+                  <i nz-icon [nzType]="eid.evidenceDirection | evidenceEnumDisplay: 'icon-name'"
+                    nz-tooltip
+                    nzTooltipPlacement="top"
+                    [nzTooltipTitle]="eid.evidenceDirection | evidenceEnumDisplay"></i>
                 </td>
-                <td>
-                  {{ eid.clinicalSignificance }}
+                <td nzAlign="center">
+                  <i nz-icon [nzType]="eid.clinicalSignificance| evidenceEnumDisplay: 'icon-name'"
+                    nz-tooltip
+                    nzTooltipPlacement="top"
+                    [nzTooltipTitle]="eid.clinicalSignificance | evidenceEnumDisplay"></i>
                 </td>
-                <td>
-                  {{ eid.variantOrigin }}
+                <td nzAlign="center">
+                  <i nz-icon [nzType]="eid.variantOrigin| evidenceEnumDisplay: 'icon-name'"
+                    nz-tooltip
+                    nzTooltipPlacement="top"
+                    [nzTooltipTitle]="eid.variantOrigin | evidenceEnumDisplay"></i>
                 </td>
-                <td>
-                  {{ eid.evidenceRating}}
+                <td nzAlign="center">
+                  {{ eid.evidenceRating }}
+                  <i nz-icon nzType="star"
+                    nzTheme="fill"
+                    nz-tooltip
+                    nzTooltipPlacement="top"></i>
                 </td>
               </tr>
               <!-- Load More button row -->
