--- a/client/src/app/components/shared/assertions-browse/assertions-browse.component.html
+++ b/client/src/app/components/shared/assertions-browse/assertions-browse.component.html
@@ -38,16 +38,16 @@
                 <th nzWidth="5%" [nzColumnKey]="sortColumns.Summary" [nzSortFn]="true">
                   Summary
                 </th>
-                <th nzWidth="10%" [nzColumnKey]="sortColumns.AssertionType" [nzSortFn]="true">
+                <th nzWidth="5%" [nzColumnKey]="sortColumns.AssertionType" [nzSortFn]="true" nzAlign="center">
                   Assertion Type
                 </th>
-                <th nzWidth="10%" [nzColumnKey]="sortColumns.AssertionDirection" [nzSortFn]="true">
+                <th nzWidth="5%" [nzColumnKey]="sortColumns.AssertionDirection" [nzSortFn]="true" nzAlign="center">
                   Assertion Direction
                 </th>
-                <th nzWidth="10%" [nzColumnKey]="sortColumns.ClinicalSignificance" [nzSortFn]="true">
+                <th nzWidth="5%" [nzColumnKey]="sortColumns.ClinicalSignificance" [nzSortFn]="true" nzAlign="center">
                   Clinical Significance
                 </th>
-                <th nzWidth="5%" [nzColumnKey]="sortColumns.AmpLevel" [nzSortFn]="true">
+                <th nzWidth="5%" [nzColumnKey]="sortColumns.AmpLevel" [nzSortFn]="true" nzAlign="center">
                   AMP/ASCO/CAP Category
                 </th>
               </tr>
@@ -70,7 +70,7 @@
                 <th>
                   <cvc-clearable-text-filter [(inputModel)]="summaryInput" placeholderText="Search Summary" [onInputChanged]="textInputCallback"></cvc-clearable-text-filter>
                 </th>
-                <th>
+                <th nzWidth="5%" nzAlign="center">
                   <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="assertionTypeInput">
                     <nz-option nzValue="PREDICTIVE" nzLabel="Predictive"></nz-option>
                     <nz-option nzValue="PROGNOSTIC" nzLabel="Prognostic"></nz-option>
@@ -78,14 +78,14 @@
                     <nz-option nzValue="PREDISPOSING" nzLabel="Predisposing"></nz-option>
                   </nz-select>
                 </th>
-                <th>
+                <th nzWidth="5%" nzAlign="center">
                   <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="assertionDirectionInput">
                     <nz-option nzValue="SUPPORTS" nzLabel="Supports"></nz-option>
                     <nz-option nzValue="DOES_NOT_SUPPORT" nzLabel="Does not Support"></nz-option>
                     <nz-option nzValue="NA" nzLabel="N/A"></nz-option>
                   </nz-select>
                 </th>
-                <th nzWidth="5%">
+                <th nzWidth="5%" nzAlign="center">
                   <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="clinicalSignificanceInput">
                     <nz-option-group nzLabel="Predictive">
                       <nz-option nzValue="SENSITIVITYRESPONSE" nzLabel="Sensitivity/Response"></nz-option>
@@ -112,7 +112,7 @@
                     </nz-option-group>
                   </nz-select>
                 </th>
-                <th>
+                <th nzWidth="5%" nzAlign="center">
                   <nz-select nzAllowClear nzPlaceHolder="Choose" (ngModelChange)="onModelChanged()" [(ngModel)]="ampLevelInput">
                     <nz-option nzValue="TIER_I_LEVEL_A" nzLabel="Tier I Level A"></nz-option>
                     <nz-option nzValue="TIER_I_LEVEL_B" nzLabel="Tier I Level B"></nz-option>
@@ -152,20 +152,29 @@
                     <i>N/A</i>
                   </ng-template>
                 </td>
-                <td>
+                <td nzAlign="center">
                   <i nz-icon nzType="align-left" nz-tooltip nzTooltipPlacement="top" [nzTooltipTitle]="aid.summary"></i>
                 </td>
-                <td>
-                  {{ aid.assertionType }}
+                <td nzAlign="center">
+                  <i nz-icon [nzType]="aid.assertionType | evidenceEnumDisplay: 'icon-name'"
+                    nz-tooltip
+                    nzTooltipPlacement="top"
+                    [nzTooltipTitle]="aid.assertionType | evidenceEnumDisplay"></i>
                 </td>
-                <td>
-                  {{ aid.assertionDirection }}
+                <td nzAlign="center">
+                  <i nz-icon [nzType]="aid.assertionDirection | evidenceEnumDisplay: 'icon-name'"
+                    nz-tooltip
+                    nzTooltipPlacement="top"
+                    [nzTooltipTitle]="aid.assertionDirection | evidenceEnumDisplay"></i>
                 </td>
-                <td>
-                  {{ aid.clinicalSignificance }}
+                <td nzAlign="center">
+                  <i nz-icon [nzType]="aid.clinicalSignificance | evidenceEnumDisplay: 'icon-name'"
+                    nz-tooltip
+                    nzTooltipPlacement="top"
+                    [nzTooltipTitle]="aid.clinicalSignificanceevidenceEnumDisplay"></i>
                 </td>
-                <td>
-                  {{ aid.ampLevel}}
+                <td nzAlign="center">
+                  {{ aid.ampLevel | formatAmp: 'compact' | ifEmpty: '--' }}
                 </td>
               </tr>
             </tbody>
