--- a/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
+++ b/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
@@ -142,17 +142,17 @@
 
               <!-- evidence type -->
               <nz-descriptions-item nzTitle="Type">
-                {{ evidence.evidenceType }}
+                {{ evidence.evidenceType | evidenceEnumDisplay }}
               </nz-descriptions-item>
 
               <!-- evidence direction -->
               <nz-descriptions-item nzTitle="Direction">
-                {{ evidence.evidenceDirection }}
+                {{ evidence.evidenceDirection | evidenceEnumDisplay}}
               </nz-descriptions-item>
 
               <!-- clinical significance -->
               <nz-descriptions-item nzTitle="Clinical Significance" nzSpan="2">
-                {{ evidence.clinicalSignificance }}
+                {{ evidence.clinicalSignificance | evidenceEnumDisplay }}
               </nz-descriptions-item>
 
 
@@ -164,7 +164,7 @@
 
               <!-- evidence rating -->
               <nz-descriptions-item nzTitle="Rating">
-                {{ evidence.evidenceRating }}
+                <cvc-evidence-rating [starRating]="evidence.evidenceRating"></cvc-evidence-rating>
               </nz-descriptions-item>
 
 
