--- a/client/src/app/components/shared/evidence-card/evidence-card.component.html
+++ b/client/src/app/components/shared/evidence-card/evidence-card.component.html
@@ -23,10 +23,10 @@
                         </nz-col>
                         <nz-col [nzSpan]="8">
                             <nz-row><b>Evidence Level:&nbsp;</b>{{ evidence.evidenceLevel }}</nz-row>
-                            <nz-row><b>Evidence Type:&nbsp;</b>{{ evidence.evidenceType }}</nz-row>
-                            <nz-row><b>Evidence Direction:&nbsp;</b>{{ evidence.evidenceDirection }}</nz-row>
-                            <nz-row><b>Clinical Significance:&nbsp;</b>{{ evidence.clinicalSignificance }}</nz-row>
-                            <nz-row><b>Variant Origin:&nbsp;</b>{{ evidence.variantOrigin }}</nz-row>
+                            <nz-row><b>Evidence Type:&nbsp;</b>{{ evidence.evidenceType | evidenceEnumDisplay }}</nz-row>
+                            <nz-row><b>Evidence Direction:&nbsp;</b>{{ evidence.evidenceDirection | evidenceEnumDisplay }}</nz-row>
+                            <nz-row><b>Clinical Significance:&nbsp;</b>{{ evidence.clinicalSignificance | evidenceEnumDisplay }}</nz-row>
+                            <nz-row><b>Variant Origin:&nbsp;</b>{{ evidence.variantOrigin | evidenceEnumDisplay }}</nz-row>
                             <nz-row [ngPlural]="evidence.drugs.length">
                                 <ng-template ngPluralCase="=0"><b>Drug:&nbsp;</b> <i>Not Applicable</i></ng-template>
                                 <ng-template ngPluralCase="=1"><b>Drug:&nbsp;</b></ng-template>
@@ -63,7 +63,7 @@
                                     <ng-container *ngIf="!last">,&nbsp;</ng-container>
                                 </ng-container>
                             </nz-row>
-                            <nz-row><b>Evidence Rating:&nbsp;</b>{{ evidence.evidenceRating }}</nz-row>
+                            <nz-row><b>Evidence Rating:&nbsp;</b><cvc-evidence-rating [starRating]="evidence.evidenceRating"></cvc-evidence-rating></nz-row>
                         </nz-col>
                     </nz-row>
                 </nz-card>
