--- a/client/src/app/views/variants/variants-summary/variants-summary.component.html
+++ b/client/src/app/views/variants/variants-summary/variants-summary.component.html
@@ -115,7 +115,7 @@
     </div>
   </nz-space-item>
   <nz-space-item>
-    <cvc-evidence-browse [variantId]="variant.id"></cvc-evidence-browse>
+    <cvc-evidence-browse [displayGeneAndVariant]="false" [variantId]="variant.id"></cvc-evidence-browse>
   </nz-space-item>
   <nz-space-item>
     <cvc-assertions-browse [variantId]="variant.id"></cvc-assertions-browse>
