--- a/client/src/app/components/shared/evidence-browse/evidence-browse.component.html
+++ b/client/src/app/components/shared/evidence-browse/evidence-browse.component.html
@@ -300,7 +300,7 @@
                 </td>
                 <td *ngIf="displayGeneAndVariant">
                   <a routerLink="/variants/{{eid.variant.id}}">
-                    <cvc-variant-pill [variant]="eid.variant"></cvc-variant-pill>
+                    <cvc-variant-tag [variant]="eid.variant"></cvc-variant-tag>
                   </a>
                 </td>
                 <td>
