--- a/client/src/app/components/shared/variants-menu/variants-menu.component.html
+++ b/client/src/app/components/shared/variants-menu/variants-menu.component.html
@@ -70,7 +70,7 @@
         <cvc-tag-list>
           <a routerLink="/variants/{{v.id}}"
             *ngFor="let v of variants">
-            <cvc-variant-pill [variant]="v"></cvc-variant-pill>
+            <cvc-variant-tag [variant]="v"></cvc-variant-tag>
           </a>
         </cvc-tag-list>
       </nz-col>
