--- a/client/src/app/components/shared/flag-list/flag-list.component.html
+++ b/client/src/app/components/shared/flag-list/flag-list.component.html
@@ -8,16 +8,12 @@
     <nz-list nzDirection="vertical" style="width: 100%">
       <nz-list-item *ngFor="let f of flags.edges">
         <nz-card style="width: 100%">
-            <cvc-user-pill [user]="f.node.flaggingUser"></cvc-user-pill>
-            flagged
-            <ng-container [ngSwitch]="this.flaggable.entityType">
-                <span *ngSwitchCase="'GENE'"><cvc-gene-pill [gene]="f.node.flaggable"></cvc-gene-pill></span>
-                <span *ngSwitchDefault>{{ f.node.flaggable.name }}</span>
-            </ng-container>
+            <cvc-user-tag [user]="f.node.flaggingUser"></cvc-user-tag>
+            flagged this entity
             {{ f.node.createdAt|timeago }}
             <p>{{ f.node.openComment.comment }}</p>
             <span *ngIf="f.node.state === 'RESOLVED'">
-                <cvc-user-pill [user]="f.node.resolvingUser"></cvc-user-pill>
+                <cvc-user-tag [user]="f.node.resolvingUser"></cvc-user-tag>
                 resolved flag
                 {{ f.node.resolvedAt|timeago }}
                 <p>{{ f.node.resolutionComment?.comment }}</p>
