--- a/client/src/app/views/variants/variants-detail/variants-detail.component.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.component.html
@@ -19,114 +19,43 @@
         </span>
       </nz-page-header-subtitle>
 
-      <!--extra-->
+      <!-- header action btns, actions menu -->
       <nz-page-header-extra *ngrxLet="viewer$ as viewer">
         <nz-space nzDirection="horizontal"
-          nzSize="small">
-          <nz-space-item>
-            <nz-button-group>
-              <button routerLink="summary"
-                routerLinkActive
-                #rlaSummary="routerLinkActive"
-                [nzType]="rlaSummary.isActive ? 'primary' : 'default'"
-                nz-button
-                nzSize="small">
-                <i nz-icon
-                  nzType="pic-right"></i>Summary
-              </button>
-            </nz-button-group>
-          </nz-space-item>
-          <nz-space-item>
-            <nz-button-group>
-              <button routerLink="comments"
-                routerLinkActive
-                #rlaComments="routerLinkActive"
-                [nzType]="rlaComments.isActive ? 'primary' : 'default'"
-                nz-button
-                nzSize="small">
-                <i nz-icon
-                  nzType="civic:comment"></i>Comments ({{ variant.comments.totalCount }})
-              </button>
-              <button *ngIf="viewer.signedIn"
-                routerLink="comments"
-                fragment="addComment"
-                routerLinkActive
-                #rlaComments="routerLinkActive"
-                [nzType]="rlaComments.isActive ? 'primary' : 'default'"
-                nz-button
-                nzSize="small">
-                <i nz-icon
-                  nzType="plus"></i>
-              </button>
-            </nz-button-group>
-          </nz-space-item>
-          <nz-space-item>
-            <nz-button-group>
-              <button routerLink="revisions"
-                routerLinkActive
-                #rlaRevisions="routerLinkActive"
-                [nzType]="rlaRevisions.isActive ? 'primary' : 'default'"
-                nz-button
-                nzSize="small">
-                <i nz-icon
-                  nzType="civic:revision"></i>Revisions ({{ variant.revisions.totalCount }})
-              </button>
-              <button *ngIf="viewer.signedIn"
-                routerLink="suggest-revision"
-                routerLinkActive
-                #rlaSuggestRevision="routerLinkActive"
-                [nzType]="rlaSuggestRevision.isActive ? 'primary' : 'default'"
-                nz-button
-                nzSize="small">
-                <i nz-icon
-                  nzType="plus"></i>
-              </button>
-            </nz-button-group>
-          </nz-space-item>
-          <nz-space-item>
-            <nz-button-group>
-              <button routerLink="flags"
-                routerLinkActive
-                #rlaFlags="routerLinkActive"
-                [nzType]="rlaFlags.isActive ? 'primary' : 'default'"
-                nz-button
-                nzSize="small">
-                <i nz-icon
-                  nzType="flag"></i>Flags ({{ variant.flags.totalCount }})
-              </button>
-              <button *ngIf="viewer.signedIn"
-                routerLink="flags"
-                routerLinkActive
-                #rlaFlags="routerLinkActive"
-                [nzType]="rlaFlags.isActive ? 'primary' : 'default'"
-                nz-button
-                nzSize="small">
-                <i nz-icon
-                  nzType="plus"></i>
-              </button>
-            </nz-button-group>
-          </nz-space-item>
-        </nz-space>
-        <button nz-button
           nzSize="small"
-          nz-dropdown
-          [nzDropdownMenu]="menu"
-          nzNoAnimation
-          style="border: none; padding: 0">
-          <i nz-icon
-            nzType="ellipsis"
-            nzTheme="outline"
-            style="font-size: 20px; vertical-align: top;"></i>
-        </button>
-        <nz-dropdown-menu #menu="nzDropdownMenu">
-          <ul nz-menu>
-            <li nz-menu-item>1st menu item length</li>
-            <li nz-menu-item>2nd menu item length</li>
-            <li nz-menu-item>3rd menu item length</li>
-          </ul>
-        </nz-dropdown-menu>
+          *ngrxLet="viewer$ as viewer">
+
+          <!-- add revision btn -->
+          <nz-space-item>
+            <button routerLink="suggest-revision"
+              *ngIf="viewer.signedIn"
+              routerLinkActive
+              #rlaComments="routerLinkActive"
+              [nzType]="rlaComments.isActive ? 'primary' : 'default'"
+              nz-button
+              nzSize="small">
+              Revise
+            </button>
+          </nz-space-item>
+
+          <!-- add flag btn -->
+          <!-- TODO implement as flag form within popover window -->
+          <nz-space-item>
+            <button routerLink="flags"
+              *ngIf="viewer.signedIn"
+              routerLinkActive
+              #rlaComments="routerLinkActive"
+              [nzType]="rlaComments.isActive ? 'primary' : 'default'"
+              nz-button
+              nzSize="small">
+              Flag
+            </button>
+          </nz-space-item>
+
+        </nz-space>
       </nz-page-header-extra>
       <nz-page-header-content>
+        <cvc-details-navigation [entity]="subscribable"></cvc-details-navigation>
         <div class="content">
           <router-outlet></router-outlet>
         </div>
